# ttd

./: .env.example  .gitignore  Dockerfile.backend  KIS_AI_Trading_Doc_Supplement_2026-03-11.md  KIS_Endpoint_Catalog_v1.md  KIS_Status_and_Error_Map_v1.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260311_0001_initial_schema.py
apps/broker_gateway/: __init__.py  main.py  service.py
apps/market_intel/: __init__.py  main.py  service.py
apps/ops_api/: __init__.py  main.py  schemas.py  store.py
apps/replay_runner/: __init__.py  main.py  service.py
apps/shadow_live/: __init__.py  main.py  service.py
apps/trading_core/: __init__.py  main.py  service.py
infra/prometheus/: prometheus.yml
libs/adapters/: __init__.py  dart.py  kis.py  kis_mapper.py  minio_store.py  nats.py  openai_parser.py
libs/config/: settings.py
libs/contracts/: __init__.py  factory.py  messages.py
libs/db/: base.py  models.py  repositories.py  (+1 more)
ops-web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: smoke_test_connections.py
tests/: test_broker_gateway_api.py  test_common_stock_universe.py  test_dart_adapter.py  test_kis_adapter.py  test_kis_mapper.py  test_market_intel_service.py  test_message_envelope.py  test_nats_event_bus.py  test_openai_parser.py  test_ops_api.py  test_raw_event_service.py  test_replay_package_service.py  test_replay_runner_api.py  test_replay_service.py  test_risk_gate.py  test_shadow_live_api.py  test_trading_core_api.py  test_trading_core_service.py
(+26 files in other folders)
