[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kis-ai-trading"
version = "0.1.0"
description = "KIS Open API based AI trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "cryptography>=44.0.3,<46.0.0",
    "redis>=5.1.1,<6.0.0",
    "nats-py>=2.9.0,<3.0.0",
    "minio>=7.2.12,<8.0.0",
    "httpx>=0.27.2,<1.0.0",
    "orjson>=3.10.11,<4.0.0",
    "structlog>=24.4.0,<25.0.0",
    "opentelemetry-api>=1.28.2,<2.0.0",
    "opentelemetry-sdk>=1.28.2,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.49b2,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.7.2,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
